feat: criação de OS com orçamento
add: documentação swagger e para testes